--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,9 @@
     "com.unity.timeline": "1.5.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.5.2",
+    "com.unity.xr.arfoundation": "4.1.7",
+    "com.unity.xr.arkit": "4.1.7",
+    "com.unity.xr.windowsmr": "5.2.2",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
